add static file and arabic letters interface

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -24,7 +24,7 @@
                         <img src= "{{ url_for('static', filename='img/blue.png' ) }} "  href="/my-link/" alt="blue">
 
                         <div class="inner-text">
-                            <h4>blue</h4>
+                            <h4>أزرق</h4>
                         </div>
                     </a>
                     </div>
@@ -34,7 +34,7 @@
                          <a href="/orange/">
                         <img src= "{{ url_for('static', filename='img/orange.png' ) }} " alt="" >
                         <div class="inner-text">
-                            <h4>orange</h4>
+                            <h4>برتقالي</h4>
                         </div>
                            </a>
                     </div>
@@ -44,13 +44,13 @@
                          <a href="/pink/">
                         <img src= "{{ url_for('static', filename='img/pink.png' ) }} " alt="">
                         <div class="inner-text">
-                            <h4>pink</h4>
+                            <h4>زهري</h4>
                         </div>
                            </a>
                     </div>
                 </div>
                 <h1>
-              
+
                 </h1>
             </div>
         </div>
