--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Fashi, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fashi | Template</title>
+    <title>بطاقات معايدة</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -31,26 +31,29 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css' ) }} ">
 </head>
- 
+
 <body>
 
        <div class="container-fluid">
 
-               
+
   <div class="jumbotron">
-    <h1>Bootstrap Tutorial</h1>
-    <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing
-    responsive, mobile-first projects on the web.</p>
+    <div align="center" >
+
+      <h1> بطــاقــات معـايــدة</h1>
+    <h3>عيــد الفطــر 1441 هـ</h3>
+    </div>
+
   </div>
- 
+
 </div>
 
     <!-- Page Preloder -->
     <div id="preloder">
         <div class="loader"></div>
     </div>
-  
- 
+
+
 
     <!-- Banner Section Begin -->
 {% block body %}
@@ -60,8 +63,25 @@
     <!-- Footer Section Begin -->
     <footer class="footer-section">
         <div class="container">
+          <div align="center" >
+
+      <p>
+           <a href="alabbad.halah@gmail.com">alabbad.halah@gmail.com</a>
+        :تصميم موقع: هالة العباد ايميل
+
+        |
+
+        <a href="alabbad.halah@gmail.com">alabbad.maram@gmail.com</a>
+                      :تصميم بطاقات: مرام العباد  ايميل
+
+         </p>
+      </div>
+
+
             <div class="row">
+
                 <div class="col-lg-3">
+
 
                         <!--
                     <div class="footer-left">
@@ -79,20 +99,22 @@
                             <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-pinterest"></i></a>
                         </div>
-                    </div> 
+                    </div>
                                 -->
 
                 </div>
-            
+
             </div>
         </div>
+
+
         <div class="copyright-reserved">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright-text">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;All rights reserved 
+Copyright &copy;All rights reserved
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </div>
                         <div class="payment-pic">
