--- a/templates/index2.html
+++ b/templates/index2.html
@@ -14,32 +14,42 @@
             {% endif %}
         {% endwith %}
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-3">
                 <div class="single-banner">
                     <a href="/blue/">
-                        <img src= "{{ url_for('static', filename='img/blue.png' ) }} "  href="/my-link/" alt="blue">
+                        <img src= "{{ url_for('static', filename='img/eid_cards-01.png' ) }} "  alt="img one"  >
                         <div class="inner-text">
-                            <h4>أزرق</h4>
+                         <!--   <h4>أزرق</h4>-->
                         </div>
                     </a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
                 <div class="single-banner">
                     <a href="/orange/">
-                        <img src= "{{ url_for('static', filename='img/orange.png' ) }} " alt="" >
+                       <img src= "{{ url_for('static', filename='img/eid_cards-02.png' ) }} " alt="img two" >
                         <div class="inner-text">
-                            <h4>برتقالي</h4>
+                          <!--  <h4>برتقالي</h4>-->
                         </div>
                     </a>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
                 <div class="single-banner">
                     <a href="/pink/">
-                        <img src= "{{ url_for('static', filename='img/pink.png' ) }} " alt="">
+                        <img src= "{{ url_for('static', filename='img/eid_cards-03.png' ) }} " alt="">
                         <div class="inner-text">
-                            <h4>زهري</h4>
+                        <!--    <h4>زهري</h4>-->
+                        </div>
+                    </a>
+                </div>
+            </div>
+                   <div class="col-lg-3">
+                <div class="single-banner">
+                    <a href="/yallow/">
+                        <img src= "{{ url_for('static', filename='img/eid_cards-04.png' ) }} " alt="">
+                        <div class="inner-text">
+                        <!--    <h4>زهري</h4>-->
                         </div>
                     </a>
                 </div>
