edit some arabic style

--- a/templates/index3.html
+++ b/templates/index3.html
@@ -24,12 +24,12 @@
               <form action = "/DownloadBlue" method = "POST"  enctype = "multipart/form-data" >
                  <div class="input-group input-group-md mb-6" >
                   
-                  <input type="text" class="form-control" placeholder="Username"  name="username"  aria-label="Username" aria-describedby="basic-addon1">
+                  <input type="text" class="form-control" placeholder="الاسم"  name="username"  aria-label="Username" aria-describedby="basic-addon1">
                   
                 </div>
                 <br>
                 <div align="center">
-                  <button type="submit" class="btn btn-outline-secondary btn-lg btn-block" >Download</button>
+                  <button type="submit" class="btn btn-outline-secondary btn-lg btn-block" >للتحميل</button>
                   <!-- class="btn btn-outline-secondary"-->
                 </div>
               </form>
@@ -39,27 +39,27 @@
               <form action = "/DownloadPink" method = "POST"  enctype = "multipart/form-data" >
                 <div class="input-group input-group-md mb-6" >
                   
-                  <input type="text" class="form-control" placeholder="Username"  name="username"  aria-label="Username" aria-describedby="basic-addon1">
+                  <input type="text" class="form-control" placeholder="الاسم"  name="username"  aria-label="Username" aria-describedby="basic-addon1">
                   
                 </div>
                 <br>
                 <div align="center">
-                  <button type="submit" class="btn btn-outline-secondary btn-lg btn-block" >Download</button>
+                  <button type="submit" class="btn btn-outline-secondary btn-lg btn-block" >للتحميل</button>
                   <!-- class="btn btn-outline-secondary"-->
                 </div>
               </form>
             </div>
-                  {% elif 'yallow'  in color %}
+                  {% elif 'yellow'  in color %}
             <div class="col-12 col-md-5">
-              <form action = "/DownloadYallow" method = "POST"  enctype = "multipart/form-data" >
+              <form action = "/DownloadYellow" method = "POST"  enctype = "multipart/form-data" >
                 <div class="input-group input-group-md mb-6" >
                   
-                  <input type="text" class="form-control" placeholder="Username"  name="username"  aria-label="Username" aria-describedby="basic-addon1">
+                  <input type="text" class="form-control" placeholder="الاسم"  name="username"  aria-label="Username" aria-describedby="basic-addon1">
                   
                 </div>
                 <br>
                 <div align="center">
-                  <button type="submit" class="btn btn-outline-secondary btn-lg btn-block" >Download</button>
+                  <button type="submit" class="btn btn-outline-secondary btn-lg btn-block" >للتحميل</button>
                   <!-- class="btn btn-outline-secondary"-->
                 </div>
               </form>
@@ -69,12 +69,12 @@
               <form action = "/DownloadOrange" method = "POST"  enctype = "multipart/form-data" >
                  <div class="input-group input-group-md mb-6" >
                   
-                  <input type="text" class="form-control" placeholder="Username"  name="username"  aria-label="Username" aria-describedby="basic-addon1">
+                  <input type="text" class="form-control" placeholder="الاسم"  name="username"  aria-label="Username" aria-describedby="basic-addon1">
                   
                 </div>
                 <br>
                 <div align="center">
-                  <button type="submit" class="btn btn-outline-secondary btn-lg btn-block" >Download</button>
+                  <button type="submit" class="btn btn-outline-secondary btn-lg btn-block" >للتحميل</button>
                   <!-- class="btn btn-outline-secondary"-->
                 </div>
               </form>
