--- a/templates/layout.html
+++ b/templates/layout.html
@@ -70,7 +70,7 @@
 
         |
 
-        <a href="alabbad.halah@gmail.com">alabbad.maram@gmail.com</a>
+        <a href="alabbad.halah@gmail.com">maram.alabbad20@gmail.com</a>
                       :تصميم بطاقات: مرام العباد  ايميل
 
          </p>
@@ -113,7 +113,7 @@
                     <div class="col-lg-12">
                         <div class="copyright-text">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;All rights reserved
+Copyright&copy;2020 All rights reserved
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </div>
                         <div class="payment-pic">
