--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,12 +66,14 @@
 
       <p>
            <a href="alabbad.halah@gmail.com">alabbad.halah@gmail.com</a>
-        :تصميم موقع: هالة العباد ايميل
+        :  مصصمة الموقع
 
         |
 
-        <a href="alabbad.halah@gmail.com">maram.alabbad20@gmail.com</a>
-                      :تصميم بطاقات: مرام العباد  ايميل
+        <a href="maram.alabbad20@gmail.com">maram.alabbad20@gmail.com</a>
+	
+                    		- مصممة البطاقات			 		<a href="https://instagram.com/maram.alabbad?igshid=2rytxcz0yulj">انستقرام </a>	
+				 								
 
          </p>
       </div>
@@ -116,9 +118,6 @@
 Copyright&copy;2020 All rights reserved
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </div>
-                        <div class="payment-pic">
-                            <img src="img/payment-method.png" alt="">
-                        </div>
                     </div>
                 </div>
             </div>
@@ -127,7 +126,6 @@ Copyright&copy;2020 All rights reserved
     <!-- Footer Section End -->
     <!-- Js Plugins -->
     <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js' ) }} "></script>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css' ) }} ">
     <script src= "{{ url_for('static', filename='js/main.js' ) }} "></script>
 </body>
 
