change jquery from 3.3.1v to 3.5.1v

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,8 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css//nice-select.css' ) }} ">
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/jquery-ui.min.css' ) }} ">
+   <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/jquery-ui.min.css' ) }} "> -->
+   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/slicknav.min.css' ) }} ">
 
